Decreasing search bar size to avoid overflow

--- a/cookies.css
+++ b/cookies.css
@@ -429,7 +429,7 @@ button#global-flag.active {
   margin: 0px;
   padding: 6px 12px 9px 4%;
   font-weight: bold;
-  width: 48%;
+  width: 43%;
 }
 
 .chrome #searchBar {
